--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Couresra!</title>
 </head>
 <body>
-<h1>Hello Couresra!</h1>		
+<h1>Hello Couresra! It's a great course</h1>		
 </body>
 </html>
